# civicdesk

./: .gitignore
auth/: main.py  pyproject.toml
auth/db/: main.py
auth/router/: admin.py  emplyee.py
backend/auth/: main.py  pyproject.toml
backend/auth/db/: database.py  models.py
backend/auth/middleware/: middleware.py
backend/auth/routes/: admin.py  citizen.py  employee.py
backend/auth/services/: mail.py
